--- a/CG.html
+++ b/CG.html
@@ -16,7 +16,7 @@
   </table>
   <table width="500" height="400" border="1">
     <tr>
-    <td><a href="https://leooooii.github.io/CGhw/hw4/hw4.html"><img src="https://i.imgur.com/hquAzLm.png"  width="500" height="400" /></td>
+    <td><a href="https://leooooii.github.io/CGhw/hw4/hw4.html"><img src="https://i.imgur.com/03hrAxn.gif"  width="500" height="400" /></td>
     </tr>
     
     <tr>
