--- a/CG.html
+++ b/CG.html
@@ -18,11 +18,13 @@
     <tr>
     <td><a href="https://leooooii.github.io/CGhw/hw4/hw4.html"><img src="https://i.imgur.com/03hrAxn.gif"  width="500" height="400" /></td>
     <td><a href="https://leooooii.github.io/CGhw/hw5/hw5.html"><img src="https://imgur.com/UEG75FZ.gif"  width="500" height="400" /></td>
+     <td><a href="https://leooooii.github.io/CGhw/hw5/hw5-3.html"><img src="https://i.imgur.com/V4DMVki.gif"  width="500" height="400" /></td>
     </tr>
     
     <tr>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw4/hw4.html">hw4</a></td>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5.html">hw5-1</a></td>
+        <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5.html">hw5-3</a></td>
     </tr>
   </table>
   <p>&nbsp;</p>
