--- a/CG.html
+++ b/CG.html
@@ -24,7 +24,7 @@
     <tr>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw4/hw4.html">hw4</a></td>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5.html">hw5-1</a></td>
-        <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5.html">hw5-3</a></td>
+        <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5-3.html">hw5-3</a></td>
     </tr>
   </table>
   <p>&nbsp;</p>
