--- a/hw6/hw6-1.html
+++ b/hw6/hw6-1.html
@@ -103,7 +103,7 @@ body {
     } else {
       nn = 0.2;
     }
-    gl_FragColor = vec4 (nn*.110/.255,nn*.168/.255,nn*.198/.225, 1.0);
+    gl_FragColor = vec4 (color.x *.52/.255 ,color.y, color.z, 1);
   }
 </script>
 
