--- a/CG.html
+++ b/CG.html
@@ -33,7 +33,7 @@
     <tr>
    <td><a href="https://leooooii.github.io/CGhw/hw5/hw5-2.html"><img src="https://i.imgur.com/kyKOUvN.gif"  width="500" height="400" /></td>
    <td><a href="https://leooooii.github.io/CGhw/hw6/hw6-1.html"><img src="https://i.imgur.com/O9sp5X9.gif"  width="500" height="400" /></td>
-      <td><a href="https://leooooii.github.io/CGhw/hw6/hw6-2.html"><img src="https://i.imgur.com/mUx5HNI.gif"  width="500" height="400" /></td>
+      <td><a href="https://leooooii.github.io/CGhw/hw6/hw6-2.html"><img src="https://i.imgur.com/XyZKrx7.gif"  width="500" height="400" /></td>
     </tr>
     
     <tr>
@@ -41,6 +41,18 @@
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw5/hw5-2.html">hw5-2</a></td>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw6/hw6-1.html">hw6-1</a></td>
             <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw6/hw6-2.html">hw6-2</a></td>
+    </tr>
+
+  </table>
+        <table width="400" height="300" border="1">
+    <tr>
+   <td><a href="https://leooooii.github.io/CGhw/hw6/hw6-3.html"><img src="https://i.imgur.com/iCpuBl9.gif"  width="500" height="400" /></td>
+
+    </tr>
+    
+    <tr>
+
+      <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw6/hw6-3.html">hw6-3</a></td>
     </tr>
 
   </table>
